--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
             
 
        }
+       h2{
+       text-align: center;
+       font-size: 50pt;
+    color: brown}
+
 
            #para-2{color: darkgreen;
            	         text-align: center;
@@ -42,7 +47,7 @@ font-size: 20pt;}
                    width: 200px;
                    position: absolute;
                    right: 48%;
-                   bottom: 30%;
+                   bottom: 23%;
                    	         z-index: 99;
                    	         border: 3px solid #FF0000;
                    	         font-size: 30pt;
@@ -132,7 +137,7 @@ li:hover{ background-color: brown;
                   	     height:300px;
                   	  border-radius: 10px;
                   	  position: relative;
-                  	  top: 20%;
+                  	  top: 10%;
                   	  left: 38%;
                   	  font-size: 15pt;}
                   	  .response{position: relative;
